deploy/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: go-on
  labels:
    app: go-on
    component: server
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: go-on
    component: server
